# currency-converter-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  docker-compose.yaml  docker-compose.yml  requirements-dev.txt  requirements.txt
.github/workflows/: backend.yml  frontend.yaml
alembic/: env.py
alembic/versions/: fdaec546a42d_create_transaction_tabe.py
backend/: .gitignore  Dockerfile  init_db.py  prestart.sh  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  routes.py  schemas.py  services.py
backend/migrations/: env.py
backend/migrations/versions/: 8998edfc8cee_initial_tables.py
backend/src/currency_converter/: main.py
backend/src/currency_converter/api/v1/: routers.py
backend/src/currency_converter/api/v1/endpoints/: conversion.py  transactions.py
backend/src/currency_converter/core/: config.py  logging.py
backend/src/currency_converter/db/: models.py  repositories.py  session.py
backend/src/currency_converter/schemas/: conversion.py  transactions.py
backend/src/currency_converter/services/: conversion.py  currency_api.py
backend/src/tests/: conftest.py
backend/src/tests/integration/: test_api.py
backend/src/tests/unit/: test_repositories.py  test_services.py
backend/tests/: test_main.py
frontend/: .eslintrc.json  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
kubernetes/: deployment.yaml  postgres-deployment.yaml
src/: app.py  config.py  database.py  exceptions.py  logger.py  model.py  repository.py  service.py  validators.py
(+20 files in other folders)
