[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = "Currency Converter API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
pydantic = "^1.10.7"
loguru = "^0.7.0"
python-multipart = "^0.0.6"
asyncpg = "^0.30.0"
alembic = "^1.16.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
httpx = "^0.24.1"
freezegun = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"